style: Streamlitの文字色を濃く変更
- .streamlit/config.tomlファイルを更新
- textColorを #F9D59B から #333333 に変更し、より読みやすくしました

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor = "#F69C9E"
 backgroundColor = "#F2D9C5"
 secondaryBackgroundColor = "#909B71"
-textColor = "#F9D59B"
+textColor = "#333333"
 font = "sans serif"
