--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor = "#F69C9E"
-backgroundColor = "#F2D9C5"
-secondaryBackgroundColor = "#909B71"
-textColor = "#333333"
+primaryColor = "#8CBEB2"
+backgroundColor = "#F2EBBF"
+secondaryBackgroundColor = "#5C4B51"
+textColor = "#F06060"
 font = "sans serif"
